
* Exclude the wheel package from the `pip freeze` output (like pip and setuptools).
  :issue:`2989`.

* Allow installing modules from a subdirectory of a vcs repository
  in non-editable mode (:issue:`3217`, :pull:`3466`).

* Make pip wheel and pip download work with vcs urls with subdirectory option
  (:pull:`3466`).

* Show classifiers in ``pip show``.

* Unhide completion command (:pull:`1810`).

* Decode requirement files according to their BOM if present (:pull:`3485`,
  :issue:`2865`).

* Fix and deprecate package name detection from url path (:issue:`3523` and
  :pull:`3495`).


**8.0.3 (2016-02-25)**

* Make ``install --quiet`` really quiet. See :issue:`3418`.

* Fix a bug when removing packages in python 3: disable INI-style parsing of the
  entry_point.txt file to allow entry point names with colons (:pull:`3434`)

* Normalize generated script files path in RECORD files. (:pull:`3448`)

* Fix bug introduced in 8.0.0 where subcommand output was not shown,
  even when the user specified ``-v`` / ``--verbose``. :issue:`3486`.

* Enable python -W with respect to PipDeprecationWarning. (:pull:`3455`)

* Upgrade distlib to 0.2.2 (fix :issue:`3467`):

  * Improved support for Jython when quoting executables in output scripts.

* Add a `--all` option to `pip freeze` to include usually skipped package
  (like pip, setuptools and wheel) to the freeze output. :issue:`1610`.


**8.0.2 (2016-01-21)**

* Stop attempting to trust the system CA trust store because it's extremely
  common for them to be broken, often in incompatible ways. See :pull:`3416`.


**8.0.1 (2016-01-21)**

* Detect CAPaths in addition to CAFiles on platforms that provide them.

* Installing argparse or wsgiref will no longer warn or error - pip will allow
  the installation even though it may be useless (since the installed thing
  will be shadowed by the standard library).

* Upgrading a distutils installed item that is installed outside of a virtual